# Cross-Protocol-Risk-Dashboard---Alert-Service

./: .gitignore  README  README.md  dashboard.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  update_snapshots
OLD/: docker-compose.yml
OLD/ingest/: producer.py
Scripts/: Pool-Etherscan
Supports/: getContractABI.py
aave-firehose/: Pool.json
docker/: docker-compose.yml
ingest/: .env  producer.py
pipeline/: __init__.py  aggregator.py  consumer.py  models.py  prices.py  snapshot.py  state.py  test_prices.py
risk_dash.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
risk_dw/: analytics.db  dbt_project.yml
risk_dw/models/: hourly_deltas.sql  hourly_metrics.sql  risk_deltas.sql  risk_metrics.sql  schema.yml  sources.yml
scripts/: UIPoolDataProvider.py  create_topic.py
snapshots/: risk-deltas-20250623T11.parquet  risk-deltas-20250624T08.parquet  risk-deltas-20250624T09.parquet  risk-deltas-20250624T20.parquet  risk-deltas-20250625T00.parquet  risk-deltas-20250625T01.parquet  risk-deltas-20250625T02.parquet  risk-deltas-20250625T05.parquet  risk-deltas-20250625T06.parquet  risk-metrics-20250623T11.parquet  risk-metrics-20250624T08.parquet  risk-metrics-20250624T09.parquet  risk-metrics-20250624T20.parquet  risk-metrics-20250625T00.parquet  risk-metrics-20250625T01.parquet  risk-metrics-20250625T02.parquet  risk-metrics-20250625T06.parquet
tests/: test_models.py
