[project]
name = "risk-dash"
version = "0.0.1"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]                 # <-- new section
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["pipeline*", "ingest*"]   # only these become importable pkgs
exclude = ["node_modules*", "docker*"]